# Kizmeow-NFT-Mint-Progress-Discord-Bot

./: README.md  config.json  main.py  pyproject.toml  讀我.md
cogs/: config.py  config_check.py
